# contrib

./: .env  .gitignore  .gitlab-ci-tx1.yml  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.html  LICENSE.txt  README.adoc  README.md  alpine-armv8-bootstrap.Dockerfile  alpine-armv8.Dockerfile  alpine-x86_64-bootstrap.Dockerfile  alpine-x86_64.Dockerfile  automake-include-fix.patch  bionic-armv8-bootstrap.Dockerfile  bionic-armv8-gitlab.Dockerfile  bionic-armv8.Dockerfile  bionic-x86_64-bootstrap.Dockerfile  bionic-x86_64-dispatch.Dockerfile  bionic-x86_64-gitlab.Dockerfile  bionic-x86_64.Dockerfile  build.py  build.rs  cargo_wrapper.py  changelog.md  conanbuildfileinfo.patch  conanfile.py  conanfile.txt  cuda-10.1.pc  dep-fix.patch  dispatch.Dockerfile  fix-hardcoded-python-path.patch  fix-x11-exts.patch  focal-armv8-bootstrap.Dockerfile  focal-armv8.Dockerfile  (+14 more)
.github/: dependabot.yml
.gitlab/: dependabot-gitlab-ci.yml  dependabot.yml
aivero-rgbd-toolkit/: CHANGELOG.md  Cargo.toml  README.adoc  conanfile.py  devops.yml
aivero-rgbd-toolkit/docker/: Dockerfile  docker-compose.yml
aivero-rgbd-toolkit/scripts/: setup_udev_rules_rs.sh
antora/: antora.Dockerfile  devops.yml
at-spi2-atk/: config.yml
atk/: config.yml
autoconf-archive/: config.yml
bootstrap-gcc/: config.yml
calib/: new.yaml  rs728312070140.yaml
ccls/: config.yml
cmake/: config.yml
direnv/: config.yml
docker/: docker-compose.yml  entry.sh
dockerfiles/: alpine-armv8-bootstrap.Dockerfile  alpine-x86_64-openssl.Dockerfile  devops.yml  focal-armv8-bootstrap.Dockerfile  focal-x86_64-balena.Dockerfile  focal-x86_64-bootstrap.Dockerfile  focal-x86_64.Dockerfile
docs/: antora.yml
glm/: config.yml
gnutls/: config.yml
go/: config.yml
gobject-introspection/: config.yml
gst-colorizer/: CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py
gst-depth-meta/: CMakeLists.txt  README.md  conanfile.py  devops.yml  meson.build  meson.build.conan
gst-depth-meta-rs/: Cargo.toml  build.rs  conanfile.py
gst-depth-meta-rs/src/: common.rs  dddq_roi_tags.rs  lib.rs
gst-depth-meta-rs/src/camera_meta/: camera_meta.rs  intrinsics.rs  mod.rs  transformation.rs
gst-depth-meta-rs/src/rgbd/: buffer.rs  rgbd.rs  sys.rs  tags.rs
gst-depth-meta-rs/src/schema/: camera_meta.capnp
gst-depth-meta/src/: CMakeLists.txt  buffer-meta.c  buffer-meta.h  depth-meta.pc.in  meson.build  tags-meta.h
gst-frame-aligner/: Cargo.toml  conanfile.py
gst-frame-aligner/src/: common.rs  framealigner.rs  lib.rs
gst-k4a/: CHANGELOG.md  Cargo.toml  conanfile.py
gst-realsense/: Cargo.toml  README.md  build.rs  conanfile.py
gst-realsense/docs/modules/ROOT/pages/: realsense.adoc
gst-realsense/src/: lib.rs  realsensesrc.rs  streams.rs
gst-rgbd/: CHANGELOG.md  Cargo.toml  README.md  conanfile.py  devops.yml
gst-rgbd-src/: Cargo.toml  build.rs  conanfile.py  devops.yml
gst-rgbd-src/docs/: antora.yml
gst-rgbd-src/src/: lib.rs
gst-rgbd-src/src/k4a/: enums.rs  error.rs  k4asrc.rs  mod.rs  properties.rs  settings.rs  stream_properties.rs  streams.rs  utilities.rs
gst-rgbd-src/src/realsense/: errors.rs  mod.rs  properties.rs  realsensesrc.rs  rs_meta.rs  settings.rs  streams.rs
gst-rgbd-src/src/realsense/schema/: rs_meta.capnp
gst-rgbd-src/src/timestamps/: mod.rs  rgbd_timestamps.rs  timestamp_internals.rs  timestamp_mode.rs
gst-rgbd/docs/: antora.yml
gst-rgbd/docs/docs/modules/ROOT/partials/: k4asrc-sequence.plantuml
gst-rgbd/docs/modules/ROOT/pages/: rgbd.adoc
gst-rgbd/src/: common.rs  lib.rs  rgbddemux.rs  rgbdmux.rs
gst-rgbd/src/rgbddemux/: demux_pad.rs  error.rs  properties.rs  rgbddemux.rs  stream_identifier.rs
gst-rgbd/src/rgbdmux/: clock_internals.rs  error.rs  mod.rs  rgbdmux.rs
gst-util/: Cargo.toml  conanfile.py  devops.yml
gst-util/src/: bin.rs  element.rs  error.rs  lib.rs  taglist.rs
gstreamer-depth-meta/: Cargo.toml  build.rs
gstreamer-nv-jetson-v4l2/: config.yml
gtk3/: config.yml
help2man/: config.yml
install/: conanbuildinfo.txt  conaninfo.txt  graph_info.json
isl/: config.yml
libedit/: config.yml
libimagequant/: config.yml
libk4a-rs/: CHANGELOG.md  Cargo.toml  LICENSE  conanfile.py  conanfile.txt
libk4a-rs-sys/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  conanfile.py  wrapper.h
libk4a-rs-sys/src/: calibration.rs  device_configuration.rs  generated_bindings.rs  hardware_version.rs  lib.rs  record_configuration.rs
librealsense/: config.yml
librealsense-rs/: CHANGELOG.md  Cargo.toml  README.md  conanfile.py  conanfile.txt
librealsense-rs-sys/: Cargo.toml  README.md  build.rs  conanfile.py
librealsense-rs-sys/src/: lib.rs  wrapper.h
librealsense-rs/src/: config.rs  context.rs  device.rs  error.rs  extrinsics.rs  frame.rs  high_level_utils.rs  intrinsics.rs  lib.rs  low_level_utils.rs  metadata.rs  option.rs  pipeline.rs  pipeline_profile.rs  processing.rs  record_playback.rs  sensor.rs  stream_profile.rs
nodejs/: config.yml
nv-jetson-compiled-source/: .gitlab-ci-tx1.yml  (+1 more)
rgbd-enums/: Cargo.toml  conanfile.py
rgbd-enums/src/: lib.rs  timestamp_mode.rs
src/: CMakeLists.txt  buffer-meta.c  buffer-meta.h  buffer.rs  calibration.rs  camera_calibration.rs  camera_meta.rs  capture.rs  color-meta.c  color-meta.h  color.rs  common.rs  config.rs  context.rs  d400_limits.rs  depth-meta.pc.in  device.rs  enabled_streams.rs  enums.rs  error.rs  errors.rs  extrinsics.rs  frame-meta.c  frame-meta.h  frame.rs  framealigner.rs  gst-colorizer.c  gst-colorizer.pc.in  gstcolorizer.c  gstcolorizer.h  gstcolorizer.pc.in  high_level_utils.rs  image.rs  imu_sample.rs  internal.rs  intrinsics.rs  k4asrc.rs  lib.rs  log.rs  low_level_utils.rs  (+33 more)
src/camera_meta/: camera_meta.rs  intrinsics.rs  transformation.rs
src/rgbd/: buffer.rs  error.rs  mod.rs  rgbd.rs  sys.rs  tags.rs
src/rgbd_timestamps/: mod.rs  rgbd_timestamps.rs  timestamp_internals.rs  timestamp_mode.rs
src/rgbddemux/: demux_pad.rs  mod.rs  rgbddemux.rs
src/rgbdmux/: clock_internals.rs  error.rs  properties.rs  rgbdmux.rs
(+1074 files in other folders)
