[package]
name = "librealsense2"
version = "2.2.5"
authors = ["Niclas Moeslund Overby <noverby@prozum.dk>", "Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>"]
description = "Rust FFI bindings for librealsense"
keywords = ["librealsense", "Rust", "FFI", "idiomatic", "safe"]
repository = "https://gitlab.com/aivero/public/librealsense-rs"
license = "MIT"
edition = "2018"
readme = "README.md"

[dependencies.librealsense2-sys]
git = "https://gitlab.com/aivero/public/librealsense-sys"
tag = "0.5.2"
