[package]
name = "aivero-rgbd-toolkit"
version = "0.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>"]
license = "LGPL"
description = "A set of GStreamer plugins to handle RGB-D video using the `video/rgbd` gstreamer caps. "
keywords = ["Realsense", "Source", "GStreamer", "Rust"]
repository = "https://github.com/aivero/contrib"
edition = "2018"
readme = "README.md"

[dependencies]
gst-realsense = { path = "../gst-realsense" }
gst-k4a = { path = "../gst-k4a" }
gst-rgbd = { path = "../gst-rgbd" }


[build-dependencies]
capnpc = "0.14.2"
gst-plugin-version-helper = "0.2.0"


# Run `cargo fmt -- --check` and `cargo clippy -- -D warnings` before commits
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
