[package]
name = "gstreamer-depth-meta"
version = "2.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>"]
description = "Rust bindings to gstreamer-depth-meta"
license = "Apache 2.0"
edition = "2018"

[dependencies]
glib-sys = "0.10.1"
glib = "0.10.3"
gstreamer-sys = "0.9.1"
gstreamer = "0.16.5"
gstreamer-video-sys = "0.9.1"
gstreamer-video = "0.16.6"
gstreamer-base = "0.16.5"
capnp = "0.14.0"
lazy_static = "1.4.0"
byte-slice-cast = "1.0.0"

[build-dependencies]
pkg-config = "0.3.19"
capnpc = "0.14.2"

[dev-dependencies]
rand = "0.8.2"

# Run `cargo fmt -- --check` and `cargo clippy -- -D warnings` before commits
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
