[package]
name = "gstreamer-frame-aligner"
version = "0.0.0"
authors = ["Joao Alves <joao.alves@aivero.com>"]
license = "Proprietary"
description = "GStreamer plugin to align depth frames to color frames"
keywords = ["GStreamer", "Rust"]
repository = "https://github.com/aivero/contrib"
edition = "2018"
readme = "README.md"

[dependencies]
glib = "0.15"
gst-depth-meta = { path = "../gst-depth-meta-rs" }
gst = { package = "gstreamer", version = "0.18" }
gst-base = { package = "gstreamer-base", version = "0.18" }
gst-video = { package = "gstreamer-video", version = "0.18" }
lazy_static = "1.4.0"
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
serde = "1.0.120"
serde_yaml = "0.8.15"
dirs = "3.0.1"
once_cell = "1"

# Run `cargo fmt -- --check` and `cargo clippy -- -D warnings` before commits
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[lib]
name = "gstframealigner"
crate-type = ["cdylib"]
path = "src/lib.rs"

