[package]
name = "gst-rgbd-src"
version = "0.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Jimmi Christensen <jimmi.christensen@aivero.com>"]
license = "LGPL"
description = "GStreamer plugin containing `video/rgbd` sources for RealSense and Azure Kinect DK (K4A) devices"
keywords = [
    "Azure Kinect",
    "GStreamer",
    "K4A",
    "Realsense",
    "Rust",
    "Source",
]
repository = "https://github.com/aivero/contrib"
edition = "2018"
readme = "README.md"
build = "build.rs"

[features]
default = [ "libk4a", "librealsense2" ]

[dependencies]
capnp = "0.14.0"
glib = "0.14.2"
gobject-sys = "0.10"
gstreamer = "0.17.1"
gstreamer-base = "0.17.0"
gstreamer-video = "0.17.0"
lazy_static = "1.4.0"
serde = "1.0.125"
serde_json = "1.0.64"
once_cell = "1"

libk4a = { path = "../libk4a-rs", optional = true }
gstreamer-depth-meta = { path = "../gst-depth-meta-rs" }
librealsense2 = { path = "../librealsense-rs", optional = true }
gst-util = { path = "../gst-util" }

[build-dependencies]
capnpc = "0.14.2"
gst-plugin-version-helper = "0.7.1"

# Run `cargo fmt -- --check` and `cargo clippy -- -D warnings` before commits
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[lib]
name = "gstrgbdsrc"
crate-type = ["cdylib"]
path = "src/lib.rs"
