[package]
name = "gst-rgbd"
version = "0.0.0" # Overwritten during conan create.
authors = ["Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Niclas Overby <niclas.overby@aivero.com"]
license = "LGPL"
description = "GStreamer plugin for demuxing and muxing `video/rgbd` streams"
keywords = ["RGB-D", "Demux", "Mux", "GStreamer", "Rust"]
repository = "https://github.com/aivero/contrib"
edition = "2018"
readme = "README.md"
build = "build.rs"

[dependencies]
glib = "0.14.2"
gstreamer = "0.17.1"
gstreamer-base = { version = "0.17.0", features = ["v1_14_1"] }
lazy_static = "1.4.0"
once_cell = "1"

gstreamer-depth-meta = { path = "../gst-depth-meta-rs" }
gst-util = { path = "../gst-util" }

[build-dependencies]
gst-plugin-version-helper = "0.7.1"

# Run `cargo fmt -- --check` and `cargo clippy -- -D warnings` before commits
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[lib]
name = "gstrgbd"
crate-type = ["cdylib"]
path = "src/lib.rs"
