[package]
name = "libk4a-sys"
version = "0.0.0"
authors = ["Andrej Orsula <andrej.orsula@aivero.com>"]
description = "Rust FFI bindings for Azure Kinect SDK"
keywords = ["Azure Kinect SDK", "Rust", "FFI", "generated", "unsafe"]
repository = "https://github.com/aivero/contrib"
license = "MIT"
edition = "2018"
readme = "README.md"
build = "build.rs"


[build-dependencies]
bindgen = "0.59.1"
pkg-config = "0.3.19"
