[package]
name = "librealsense2"
version = "0.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>"]
description = "Rust FFI bindings for librealsense"
keywords = ["librealsense", "Rust", "FFI", "idiomatic", "safe"]
repository = "https://gitlab.com/aivero/public/librealsense-rs"
license = "MIT"
edition = "2018"
readme = "README.md"

[dependencies]
librealsense2-sys = { path = "../librealsense-rs-sys" }
