[package]
name = "rgbd-enums"
version = "0.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>"]
description = "Definition of RGB-D timestamps for custom source elements that use video/rgbd CAPS"
license = "Apache 2.0"
edition = "2018"

[dependencies]
glib = "0.10.3"

# Run `cargo fmt -- --check` and `cargo clippy -- -D warnings` before commits
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"
